# blog

./: Makefile  README.md  archives.html  authors.html  categories.html  classy-data-with-dataclasses.html  comprehensions-are-common-python.html  deprecate-for-else-or-else.html  feature-creep-vs-easy-onramp.html  index.html  index2.html  not-dead-only-resting.html  one-obvious-way.html  pelicanconf.py  pickle-in-a-pickle.html  publishconf.py  pyproject.toml  python-feature_opinions.html  python-packaging-14-obvious-ways.html  simple-switch-statement-for-python.html  sitemap.xml  tags.html  the-walrus-and-the-software-carpenter.html  the-when-of-lambda.html  type-hinting-get-the-hint.html  walrus-hunting-with-strenum.html  welcome-to-when-of-python.html  when-of-pandas.html  who-of-python.html
author/: ben-denham-with-grant-paton-simpson.html  ben-denhan-grant-paton-simpson.html  grant-paton-simpson-featuring-danny-adair.html  grant-paton-simpson-with-ben-denham.html  grant-paton-simpson.html  grant-paton-simpson2.html
category/: python.html  python2.html
content/: classy_data_with_dataclasses.md  comprehensions_are_common_python.md  deprecate_for_else_or_else.md  feature_creep_vs_easy_onramp.md  feature_opinions.md  one_obvious_way.md  pickle_in_a_pickle.md  simple_switch_statement_for_python.md  the_walrus_and_the_software_carpenter.md  the_when_of_lambda.md  type_hinting_get_the_hint.md  walrus_hunting_with_strenum.md  welcome.md  who_of_python.md
css/: .custom.css.~undo-tree~  .darkly.bootstrap.css.~undo-tree~  custom.css
extras/: .styles.css.~undo-tree~  (+1 more)
(+37 files in other folders)
